--- a/index.html
+++ b/index.html
@@ -115,9 +115,9 @@
 </blockquote> 
 <footer>Juri Poutanen, <cite>Rosseland and Flux Mean Opacities for Compton Scattering</cite></footer>
 
-<p>Here, "bolometric" refers to measurements or quantities that account for radiation over all wavelengths, not just a limited portion of the electromagnetic spectrum. In the context of stars, the bolometric radiation flux represents the total energy emitted per unit area across all wavelengths. Radiative acceleration refers to the acceleration imparted to matter by radiation pressure. </p>
+<p>Here, <b>bolometric</b> refers to measurements or quantities that account for radiation over all wavelengths, not just a limited portion of the electromagnetic spectrum. The bolometric radiation flux represents the total energy emitted per unit area across all wavelengths. </p>
 
-<p>Light exerts pressure when it interacts with matter, such as gasses and dust. This pressure can cause matter to accelerate. Radiative acceleration drives stellar winds, it influences the dynamics of accretion disks around compact objects, and it affects the structure and evolution of stars. </p>
+<p><b>Radiative acceleration</b> refers to the acceleration imparted to matter by radiation pressure. Light exerts pressure when it interacts with matter, this pressure can cause matter to accelerate. Radiative acceleration drives stellar winds, it influences the dynamics of accretion disks around compact objects, and it affects the structure and evolution of stars. </p>
 
 <h2>Compton Scattering and the RTE</h2>
 
@@ -179,7 +179,7 @@ Now all we have to do is figure out what the redistribution function is and then
 \end{equation}
 \]
 
-<p>We're done! A similar expression can be found for the Flux mean opacity. Sure, we’ve made a few approximations, but all of them hold water in the regimes of interest to Juri Poutanen (isotropic, hot, dense, and optically thick media dominated by Compton scattering). Notably, electron degeneracy and relativistic effects have been accounted for. </p>
+<p>We're done! A similar expression can be found for the Flux mean opacity. Sure, we’ve made a few approximations, but all of them hold water in the regimes of interest to Juri Poutanen. Notably, electron degeneracy and relativistic effects have been accounted for. </p>
 
 <p>We are now poised to reap the rewards of Juri Poutanen's labour by using this result by reviewing the litterature on previousy known approximations. Luckily, Poutanen did that for us too! </p>
 
@@ -195,9 +195,9 @@ Now all we have to do is figure out what the redistribution function is and then
 
 <h2>Conclusion / My Take</h2>
 
-<p>What struck me about this paper is the marriage of analytical and computational sophistication in Poutanen’s result. It appears to be the final word on the computation of both the Rosseland mean opacity and the flux mean opacity in these high-energy regimes. I'm impressed by Poutanen's ability to make his findings legible to a wide audience and to package them into a coherent 8-page bombshell of a paper. </p>
+<p>What struck me about this paper was the analytical sophistication of Poutanen’s result. It appears to be the final word on the computation of both the Rosseland mean opacity and the flux mean opacity in these high-energy regimes. I'm impressed by Poutanen's ability to make his findings legible to a wide audience and to package them into a coherent 8-page bombshell of a paper. </p>
 
-<p>The qualification I put in the title is obviously a bit of a joke at the expense of Juri Poutanen, but it's not a very cutting one because the result is much more general and generalizable than that joke would have you believe. Half of those qualifiers are sound assumptions in many astrophysical contexts (LTE, Optically Thick, Hot), and the result also holds in the non-degenerate case. Furthermore, something I glossed over in this review was that absorbption <i>was</i> accounted for! Finally, the assumption that the scattering agents are isotropically distributed is good because (a) it simplifies the reader's job, and (b) this paper lays the ground-work for computing non-isotropic distributions too: just figure out how to incorporate that into the redistribution function and you're done! </p>
+<p>The qualification I put in the title is obviously a bit of a joke at the expense of Poutanen, but it's not a very cutting one because the result is much more general and generalizable than the joke would have you believe. Half of those qualifiers are sound assumptions in many astrophysical contexts (LTE, Optically Thick, Hot), and the result also holds in the non-degenerate case. Furthermore, something I glossed over in this review was that absorbption <i>was</i> accounted for! Finally, the assumption that the scattering agents are isotropically distributed is good because (a) it simplifies the reader's job, and (b) this paper lays the ground-work for computing non-isotropic distributions too: just figure out how to incorporate that into the redistribution function and you're done! </p>
 
 <p>
 This paper was published in Feburary 2017 and has accrued 40 citations as of Feburary 2024. I sampled 15 of those citations and they were split about 50/50 between papers on stellar evolution and papers on neutron stars. Nevertheless, it's hard to evaluate the importance of this paper without being familiar with the field. (I didn't trouble myself to read those papers to find out how critical Poutanen's work was to them.)</p>
