--- a/index.html
+++ b/index.html
@@ -65,6 +65,8 @@
 
   <p><b>Paper:</b> <a href="https://iopscience.iop.org/article/10.3847/1538-4357/835/2/119">https://iopscience.iop.org/article/10.3847/1538-4357/835/2/119</a></p>
 
+<p><a href="https://users.utu.fi/jurpou/">Juri Poutanen</a>, author of the paper we are reviewing, is a high-energy astrophysicist in Finland. He studies stellar interiors and X-ray bursts.</p>
+
   <br/>
       <div>
         <img
@@ -76,17 +78,15 @@
           src="./assets/xray_burst.webp";
           width="49%"
         />
-        <figcaption>Artistic renditions of radiative transport inside of hot, degenerate, optically thick, scattering dominated poster child media: cores of stars (left) and X-ray bursts (right).</figcaption>
+        <figcaption>Artistic renditions of radiative transport inside of hot, degenerate, optically thick, scattering dominated sources: cores of stars (left) and X-ray bursts (right).</figcaption>
       </div>
 
 
 <h2>Introduction </h2>
 
-<p><a href="https://users.utu.fi/jurpou/">Juri Poutanen</a>, author of the paper we are reviewing, is a high-energy astrophysicist in Finland. He studies stellar interiors and X-ray bursts.</p>
+<p>Radiative transport is one of the two pillars of astrophysical heat transport that underpin our knowledge of <i>many</i> (all?) astrophysical processes. The Rosseland and Flux mean opacities provide a way to compress a whole spectrum's worth of energy-transfer information into a single number, as such they are essential and ubiquitous tools in the arsenal of astrophysicists. </p>
 
-<p>Our understanding of radiative pressure and radiative heat transport underpins our understanding of <i>many</i> (all?) astrophysical processes. The Rosseland and Flux mean opacities are essential and ubiquitous tools in the arsenal of astrophysicists because they provide a way to compress a whole spectrum's worth of energy-transfer information into a single number.</p>
-
-<p>Juri Poutanen's paper is about deriving an exact expression for the Rosseland and Flux mean opacities, so we have no choice but to get down and dirty with the equations. However, we will not be as assiduous in our book-keeping as Poutanen is in the paper, opting instead to select a few key equations and pick them appart for physical intuition. (If you want to see the derivations in all their glory you can read the paper. If that doesn't quench your appetite there's an 83 page monograph on the minutae of Compton Scattering penned by the same hand.) </p>
+<p>Juri Poutanen's paper is about deriving an exact expression for the Rosseland and Flux mean opacities, so we have no choice but to get down and dirty with some equations. However, we will not be as assiduous in our book-keeping as Poutanen is in the paper, opting instead to select a few key equations and pick them appart for physical intuition. (If you want to see the derivations in all their glory you can read the paper. If that doesn't quench your appetite there's an 83 page monograph on the minutae of Compton Scattering penned by the same hand.) </p>
 
 <h3>Rosseland Mean Opacity</h3>
 
@@ -100,7 +100,7 @@
 
 <p>One of the important parameters in determining the dynamics of radiation transfer through a medium is its opacity. The opacity quantifies the rate of scattering (photons bouncing off of things) and absorption (photons being gobbled up by things). The opacity of a medium is frequency dependent, i.e. media typically absorb and scatter different frequencies of light differently. </p>
 
-<p>The Rosseland mean opacity is a weighted frequency-average of the opacity of a medium. Weight is ascribed proportionally to the sensitivity of the black-body spectrum to temperature change because these are the frequencies that are most efficient in transporting energy down thermal gradients. The Rosseland mean opacity is a useful tool in the hands of astronomers for it enables a simplified treatment of radiative transfer.</p>
+<p>The Rosseland mean opacity is a weighted frequency-average of the opacity of a medium. Weight is ascribed proportionally to $\partial B_\nu / \partial T$—the temperature derivative of the black-body, because this quantity measures how efficient that frequency is at transporting energy down thermal gradients. The Rosseland mean opacity is a useful tool in the hands of astronomers because it enables a simplified treatment of radiative transfer.</p>
 
 <h3>Flux Mean Opacity</h3>
 
@@ -129,7 +129,7 @@
 \end{equation}
 \]
 
-<p>Compton scattering is a photon-electron inelastic collision. It's "inelastic" because energy is echanged between photons and the electrons, this only happens when the electrons are hot. Compton scattering is an innately quantum phenomenon, so classical EM waves won’t help us here. A photon—a quanta of the EM field—has some probability of scattering off of an electron. We like to think about photons as being located in some particular place rather than in a superposition of many places at once, and, thankfully, this “billiard ball” imagery is applicable here if we are willing to take a few QED-derived formulae on good faith. </p>
+<p>Compton scattering is a photon-electron inelastic collision. It's "inelastic" because energy is echanged between photons and the electrons, this only happens when the electrons are hot. Compton scattering is an innately quantum phenomenon, so classical EM waves won’t help us here. A photon—a quanta of the EM field—has some probability of scattering off of an electron. We like to think about photons as being located in some particular place rather than in a superposition of many places at once, and, thankfully, this “billiard ball” imagery is applicable here if we are willing to take a few QED-derived (Quantum Electro Dynamics) formulae on good faith. </p>
 
 
 <p>Starting from the relativistic kinetic equation for Compton scattering, which accounts for induced scattering and fermion degeneracy, Poutanen guids us to the RTE. We will gloss over the derivation but pick apart the resulting RTE as it is the wellspring from which all knowledge flows. </p>
@@ -144,12 +144,12 @@
 \]
 
 <p>
-The above expression may look alien but rest assured, it is a familiar foe—Equation \eqref{eq:RTE0}—couched in the trappings of foreign notation. First we see that there are only four terms, one on the left hand side (LHS) and three on the right hand side (RHS). </p>
+The above expression may look alien but rest assured, it is merely a familiar face couched in the trappings of foreign notation (it's Equation \eqref{eq:RTE0}). First we see that there are only four terms, one on the left hand side (LHS) and three on the right hand side (RHS). </p>
 
 <p>LHS: \(\hat \omega\) is the direction of propagation, \(\mathbf x\) is the four momentum of the incident photons and it therefore encodes frequency as well as direction, \(n(\mathbf x)\) is the photon number density. Since \(I_x \propto n_x x\), we see that the left hand side is related to \({d I_\nu \over d s}\) by a factor of the frequency \(x \equiv \nu\)—the author chose to put it’s reciprocal on the left-hand side instead. </p>
 
 <p>
-RHS: \(\mathbf x_1\) is the four-momentum of the scattered photon, \(\mu\) is the cosine of the scattering angle, and \(R(x,x_1,\mu)\) is the redistribution function which quantifies the rate at which a photon with energy $x$ will scatter into a photon with energy $x_1$, at scattering angle is \(\mu\). As intimidating as they look, there are only three terms, and, two of them are also familiar. The first is negative, and it’s proportional to \(n(\mathbf x)\), just like \(-\sigma_\nu I_\nu\). The second is positive, and looks alot like the in-scattering term \(\int \sigma_\nu (\Omega’ \to \Omega )d\Omega’\). The final term is a bit awkward and it may have to do with photon-photon interactions (don't ask me); suffice it to say that if \(n(\mathbf x)<<1\), the term is negligible and when we are in regimes where the redistribution is roughly symmetric in it’s first two arguments \(R(x,x_1,\mu)\approx R(x_1,x,\mu)\), it is also negligible. </p>
+RHS: \(\mathbf x_1\) is the four-momentum of the scattered photon, \(\mu\) is the cosine of the scattering angle, and \(R(x,x_1,\mu)\) is the redistribution function which quantifies the rate at which a photon with energy $x$ will scatter into a photon with energy $x_1$, at scattering angle is \(\mu\). As intimidating as they look, there are only three terms, and, two of them are familiar. The first is negative, and it’s proportional to \(n(\mathbf x)\), just like \(-\sigma_\nu I_\nu\). The second is positive, and looks alot like the in-scattering term \(\int \sigma_\nu (\Omega’ \to \Omega )d\Omega’\). The final term is a bit awkward and it may have to do with photon-photon interactions (don't ask me); suffice it to say, that if \(n(\mathbf x)<<1\), the term is negligible and when we are in regimes where the redistribution is roughly symmetric in it’s first two arguments \(R(x,x_1,\mu)\approx R(x_1,x,\mu)\), it is also negligible. </p>
 
 <p>
 Now all we have to do is figure out what the redistribution function is and then we know the full RTE (in other words EVERYTHING). 
@@ -157,13 +157,15 @@ Now all we have to do is figure out what the redistribution function is and then
 
 <h2>The Redistribution Function</h2>
 
-<footer>I'm weary of losing you by writing too many equations, this section is words only.</footer>
+<!--<footer>I'm weary of losing you by writing too many equations, this section is words only.</footer>-->
 
 <p>The all important redistribution function (RF) encapsulates the microscopic physics of photon-electron interactions. The electron distribution also factors into the integrand of RF (which can be expressed as an integral, see equaiton 11 in the paper). </p>
 
 <p>For the electrons, we take the Fermi-Dirac distribution (isotropic), since we are interested in the degenerate regime. Using this isotropic distribution implies that we are in an isotropic and locally thermalized (LTE) medium. </p>
 
 <p>Another ingredient that enters the dynamics of these interactions is the Klein-Nishina reaction rate, which is related to the Klein-Nishina cross section. The reaction rate (and the cross section) is dependent on the four-momenta of the incoming and scattered photon. This aditional element of complication is required to deal with relativistic electrons. (And the electrons that inhabit the nuclear furnaces of X-ray-bursting neutron stars are very much relativistic.) </p>
+
+<p class="block">Analogy. Imagine the electrons are billiard balls and photons are like ping-pong balls, and they're all bouncing around the place. The cross-section of a particle is kindof like the $\pi r^2$, where $r$ is the ball's radius. The greater the cross section, the likelier two passing balls will hit each other. Unfortunately, the Klein-Nishina cross section is dependent on speed and direction of incident. This means that the billiard balls' sizes appear larger to ping-pong balls (photons) that it is speeding towards that ping pong balls that it's travelling perpendicularly to. This is quite unintuitive to picture. That's special relativity.</p>
 
 <p>To get at a manageable expression for the distribution of photons, we expand around the black-body distribution to first order. This is justified because in the thermonuclear burning regions we are concerned with, the radiation field is nearly isotropic. The non-black-body term depends on the (frequency dependent) mean-free path $l_x$.</p>
 
@@ -191,6 +193,8 @@ Now all we have to do is figure out what the redistribution function is and then
   <figcaption>Rosseland mean opacity (in units of $\sigma_TN_e/\rho$) as a function of dimensionless temperature for various values of the degeneracy parameter $\eta$. Solid black curves are exact calculations (the flux mean opacity is equal to the Rosseland mean to within $10^{-4}$). The top curve corresponds to $\eta=-10$; for the following curves $\eta$ varies from $-1$ to $7$. (a) The black squares and blue dots are numerical results from previous papers, and the red dotted line and green-dashed line are approximations used in the litterature. (b) The dotted and dashed curves are values computed from approximations derived in the paper.</figcaption>
 </div>
 
+Plot (a) shows us clearly that previously used approximations break down in regions with high electron degeneracy. The green dash-dot curve also breaks down at high temperature. 
+
 <br/>
 
 <h2>Conclusion / My Take</h2>
@@ -204,7 +208,7 @@ This paper was published in Feburary 2017 and has accrued 40 citations as of Feb
 
 <p>It definitely seems like a useful piece of work; Poutanen found errors in one of the approximations used in the litterature and he was able to show us explicitly in what temperature and degeneracy regimes other approximations become invalid. I doubt it voids any past work but it does empower us to discern the accuracy of past results that made use of dubious approximations. Moreover, it paves the way for more precise simulations of X-ray bursts and solar interiors and it gives us more confidance in future simulation results. Perhaps a future paper will do the same derivation but with an anisotropic electron distribution to model strong magnetic fields. </p>
 
-<p>Unfortunately I couldn't find Juri Poutanen on GitHub and was unable to scrutinize his code; though I have messaged him about this.</p>
+<p>Unfortunately I couldn't find Juri Poutanen on GitHub and was unable to scrutinize his code; though I have messaged him about this. I also felt that there was a computational optimization section missing from this paper; we were never shown how fast the $l_x$ iterations converged. </p>
 
 <h2>TL;DR</h2>
 
@@ -215,12 +219,22 @@ This paper was published in Feburary 2017 and has accrued 40 citations as of Feb
   <li>Methods lay groundwork for calculations involving more complicated scattering-agent distribution functions.</li>
 </ul>
 </p>
-
-
     </br></br></br></br></br></br>
     </br></br></br></br></br></br>
     </br></br></br></br></br></br>
   </div>
 </body>
-
 </html>
+
+
+
+<!--Kyle's comments:
+
+- Explain the plot in simple terms, with billiard ball analagy and explain with an analogy
+- Connect Klein-Nishina to billiardball analogy 
+- Give more astrophysical examples
+- Not too many equations (appendix)
+
+-->
+
+
