--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 <p class="block"><b>Compton Scattering Analogy:</b> A photon—a quanta of the EM field—has some probability of scattering off of an electron. We like to think about photons as being located in some particular place rather than in a superposition of many places at once, and, thankfully, this “billiard ball” imagery is applicable if we are willing to take a few QED-derived (Quantum Electro Dynamics) formulae on good faith. </p>
 
 
-<p>Starting from the relativistic kinetic equation for Compton scattering, which accounts for induced scattering and fermion degeneracy, Poutanen guids us to the RTE. We will gloss over the derivation but pick apart the resulting RTE as it is the wellspring from which all knowledge flows. </p>
+<p>Starting from the <span class="cursive">Relativistic Kinetic Equation for Compton scattering</span> <span class="peasant">(a dumb equation which describes the macroscopic, statistical behaviour of populations of photons and electrons in terms of their microscopic properties)</span>, Poutanen guids us to the RTE. We will gloss over the derivation but pick apart the resulting RTE as it is the wellspring from which all knowledge flows. </p>
 
 \[
 \begin{align*}
