--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
           src="./assets/xray_burst.webp";
           width="49%"
         />
-        <figcaption>Artistic renditions of radiative transport inside of hot, degenerate, optically thick, scattering dominated sources: cores of stars (left) and X-ray bursts (right).</figcaption>
+        <figcaption>Artistic renditions of of hot, degenerate, optically thick, scattering dominated astrophysical sources: cores of stars (left) and X-ray bursts (right).</figcaption>
       </div>
 
 
@@ -131,10 +131,10 @@
 
 <p>Compton scattering is a photon-electron inelastic collision. It's "inelastic" because energy is echanged between photons and the electrons, this only happens when the electrons are hot. Compton scattering is an innately quantum phenomenon, so classical EM waves won’t help us here.</p> 
 
-<p class="block"><b>Compton Scattering Analogy:</b> A photon—a quanta of the EM field—has some probability of scattering off of an electron. We like to think about photons as being located in some particular place rather than in a superposition of many places at once, and, thankfully, this “billiard ball” imagery is applicable if we are willing to take a few QED-derived (Quantum Electro Dynamics) formulae on good faith. </p>
+<p class="block"><b>Compton Scattering Analogy:</b> A photon—a quanta of the EM field—has some probability of scattering off of an electron. We like to think about photons as being located in some particular place rather than in a superposition of many places at once. Thankfully, this “billiard ball” imagery is applicable if we are willing to take a few QED-derived (Quantum Electro Dynamics) formulae on good faith. </p>
 
 
-<p>Starting from the <span class="cursive">Relativistic Kinetic Equation for Compton scattering</span> <span class="peasant">(a dumb equation which describes the macroscopic, statistical behaviour of populations of photons and electrons in terms of their microscopic properties)</span>, Poutanen guids us to the RTE. We will gloss over the derivation but pick apart the resulting RTE as it is the wellspring from which all knowledge flows. </p>
+<p>Starting from the <span class="cursive">Relativistic Kinetic Equation for Compton scattering</span> <span class="peasant">(a dumb equation which describes the macroscopic, statistical behaviour of populations of photons and electrons in terms of their microscopic properties)</span>, Poutanen guids us to the RTE. We will gloss over the derivation but pick apart the resulting RTE, for it is the wellspring from which all knowledge floweth. </p>
 
 \[
 \begin{align*}
@@ -151,10 +151,10 @@ The above expression may look alien but rest assured, it is merely a familiar fa
 <p>LHS: \(\hat \omega\) is the direction of propagation, \(\mathbf x\) is the four momentum of the incident photons and it therefore encodes frequency as well as direction, \(n(\mathbf x)\) is the photon number density. Since \(I_x \propto n_x x\), we see that the left hand side is related to \({d I_\nu \over d s}\) by a factor of the frequency \(x \equiv \nu\)—the author chose to put it’s reciprocal on the left-hand side instead. </p>
 
 <p>
-RHS: \(\mathbf x_1\) is the four-momentum of the scattered photon, \(\mu\) is the cosine of the scattering angle, and \(R(x,x_1,\mu)\) is the redistribution function which quantifies the rate at which a photon with energy $x$ will scatter into a photon with energy $x_1$, at scattering angle is \(\mu\). As intimidating as they look, there are only three terms, and, two of them are familiar. The first is negative, and it’s proportional to \(n(\mathbf x)\), just like \(-\sigma_\nu I_\nu\). The second is positive, and looks alot like the in-scattering term \(\int \sigma_\nu (\Omega’ \to \Omega )d\Omega’\). The final term is a bit awkward and it may have to do with photon-photon interactions (don't ask me); suffice it to say, that if \(n(\mathbf x)<<1\), the term is negligible and when we are in regimes where the redistribution is roughly symmetric in it’s first two arguments \(R(x,x_1,\mu)\approx R(x_1,x,\mu)\), it is also negligible. </p>
+RHS: \(\mathbf x_1\) is the four-momentum of the scattered photon, \(\mu\) is the cosine of the scattering angle, and \(R(x,x_1,\mu)\) is the redistribution function which quantifies the rate at which a photon with energy $x$ will scatter into a photon with energy $x_1$, at scattering angle \(\mu\). As intimidating as they look, there are only three terms, and, two of them are familiar. The first is negative, and it’s proportional to \(n(\mathbf x)\), just like \(-\sigma_\nu I_\nu\). The second is positive, and looks alot like the in-scattering term \(\int \sigma_\nu (\Omega’ \to \Omega )d\Omega’\). The final term is a bit awkward and it may have to do with photon-photon interactions (don't ask me); suffice it to say, that if \(n(\mathbf x)<<1\), the term is negligible and when we are in regimes where the redistribution is roughly symmetric in it’s first two arguments \(R(x,x_1,\mu)\approx R(x_1,x,\mu)\), it is also negligible. </p>
 
 <p>
-Now all we have to do is figure out what the redistribution function is and then we know the full RTE (in other words EVERYTHING). 
+Now all we have to do is figure out what the redistribution function is and then we know the full RTE <span class="peasant">(in other words EVERYTHING)<span class="peasant">. 
 </p>
 
 <h2>The Redistribution Function</h2>
@@ -163,9 +163,9 @@ Now all we have to do is figure out what the redistribution function is and then
 
 <p>The all important redistribution function (RF) encapsulates the microscopic physics of photon-electron interactions. The electron distribution also factors into the integrand of RF (which can be expressed as an integral, see equaiton 11 in the paper). </p>
 
-<p>For the electrons, we take the Fermi-Dirac distribution (isotropic), since we are interested in the degenerate regime. Using this isotropic distribution implies that we are in an isotropic and locally thermalized (LTE) medium. </p>
+<p>For the electrons, we take the Fermi-Dirac distribution, since we are interested in the degenerate regime. Using this isotropic distribution implies that we are in an isotropic and locally thermalized (LTE) medium <span class="peasant">(i.e. no big magnetic fields)</span>.</p>
 
-<p>Another ingredient that enters the dynamics of these interactions is the Klein-Nishina reaction rate, which is related to the Klein-Nishina cross section. The reaction rate (and the cross section) is dependent on the four-momenta of the incoming and scattered photon. This aditional element of complication is required to deal with relativistic electrons. (And the electrons that inhabit the nuclear furnaces of X-ray-bursting neutron stars are very much relativistic.) </p>
+<p>Another ingredient that enters the dynamics of these interactions is the <b>Klein-Nishina reaction rate</b>, which is related to the Klein-Nishina cross section. The reaction rate (and the cross section) is dependent on the four-momenta of the incoming and scattered photon. This aditional element of complication is required to deal with relativistic electrons. (And the electrons that inhabit the nuclear furnaces of X-ray-bursting neutron stars are very much relativistic.) </p>
 
 <p class="block"><b>Cross Section Analogy:</b> Imagine the electrons are billiard balls and photons are like ping-pong balls, and they're all bouncing around the place. The cross-section of a particle is kindof like the $\pi r^2$, where $r$ is the ball's radius. The greater the cross section, the likelier two passing balls will hit each other. Unfortunately, the Klein-Nishina cross section is dependent on speed and direction of incident. This means that the billiard balls' sizes appear larger to ping-pong balls (photons) that it is speeding towards that ping pong balls that it's travelling perpendicularly to. This is quite unintuitive to picture. That's special relativity.</p>
 
@@ -185,7 +185,7 @@ Now all we have to do is figure out what the redistribution function is and then
 
 <p>We're done! A similar expression can be found for the Flux mean opacity. Sure, we’ve made a few approximations, but all of them hold water in the regimes of interest to Juri Poutanen. Notably, electron degeneracy and relativistic effects have been accounted for. </p>
 
-<p>We are now poised to reap the rewards of Juri Poutanen's labour by using this result by reviewing the litterature on previousy known approximations. Luckily, Poutanen did that for us too! </p>
+<p>We are now poised to reap the rewards of Juri Poutanen's labour by using this result to review the litterature. Luckily, Poutanen did that for us too! </p>
 
 <div>
   <img
@@ -195,18 +195,16 @@ Now all we have to do is figure out what the redistribution function is and then
   <figcaption>Rosseland mean opacity (in units of $\sigma_TN_e/\rho$) as a function of dimensionless temperature for various values of the degeneracy parameter $\eta$. Solid black curves are exact calculations (the flux mean opacity is equal to the Rosseland mean to within $10^{-4}$). The top curve corresponds to $\eta=-10$; for the following curves $\eta$ varies from $-1$ to $7$. (a) The black squares and blue dots are numerical results from previous papers, and the red dotted line and green-dashed line are approximations used in the litterature. (b) The dotted and dashed curves are values computed from approximations derived in the paper.</figcaption>
 </div>
 
-Plot (a) shows us clearly that previously used approximations break down in regions with high electron degeneracy. The green dash-dot curve also breaks down at high temperature. 
-
-<br/>
+<p>Plot (a) shows us clearly that previously used approximations break down in highly degenerate regions of phase space. The green dash-dot curve also breaks down at high temperature, implying that any previous work that relied heavily on the approximation for $\Theta \sim 1$ may be invalid. </p>
 
 <h2>Conclusion / My Take</h2>
 
-<p>What struck me about this paper was the analytical sophistication of Poutanen’s result. It appears to be the final word on the computation of both the Rosseland mean opacity and the flux mean opacity in these high-energy regimes. I'm impressed by Poutanen's ability to make his findings legible to a wide audience and to package them into a coherent 8-page bombshell of a paper. </p>
+<p><b>What struck me</b> about this paper was the analytical sophistication of Poutanen’s result. It appears to be the final word on the computation of both the Rosseland mean opacity and the flux mean opacity in these high-energy regimes. I'm impressed by Poutanen's ability to make his findings legible to a wide audience and to package them into a coherent 8-page bombshell of a paper. </p>
 
-<p>The qualification I put in the title is obviously a bit of a joke at the expense of Poutanen, but it's not a very cutting one because the result is much more general and generalizable than the joke would have you believe. Half of those qualifiers are sound assumptions in many astrophysical contexts (LTE, Optically Thick, Hot), and the result also holds in the non-degenerate case. Furthermore, something I glossed over in this review was that absorbption <i>was</i> accounted for! Finally, the assumption that the scattering agents are isotropically distributed is good because (a) it simplifies the reader's job, and (b) this paper lays the ground-work for computing non-isotropic distributions too: just figure out how to incorporate that into the redistribution function and you're done! </p>
+<p>The qualification I put in the title is obviously a bit of a joke at the expense of Poutanen, but it's not very cutting because the result is much more general and generalizable than the joke would have you believe. Half of those qualifiers are sound assumptions in many astrophysical contexts (LTE, Optically Thick, Hot), and the result also holds in the non-degenerate case. Furthermore, something I glossed over in this review was that absorbption <i>was</i> accounted for! Finally, the assumption that the scattering agents are isotropically distributed is good because (a) it simplifies the reader's job, and (b) this paper lays the ground-work for computing non-isotropic distributions too: just figure out how to incorporate that into the redistribution function and you're done! </p>
 
 <p>
-This paper was published in Feburary 2017 and has accrued 40 citations as of Feburary 2024. I sampled 15 of those citations and they were split about 50/50 between papers on stellar evolution and papers on neutron stars. Nevertheless, it's hard to evaluate the importance of this paper without being familiar with the field. (I didn't trouble myself to read those papers to find out how critical Poutanen's work was to them.)</p>
+<b>This paper was published</b> in Feburary 2017 and has accrued 40 citations as of Feburary 2024. I sampled 15 of those citations and they were split about 50/50 between papers on stellar evolution and papers on neutron stars. Nevertheless, it's hard to evaluate the importance of this paper without being familiar with the field. (I didn't trouble myself to read those papers to find out how critical Poutanen's work was to them.)</p>
 
 <p>It definitely seems like a useful piece of work; Poutanen found errors in one of the approximations used in the litterature and he was able to show us explicitly in what temperature and degeneracy regimes other approximations become invalid. I doubt it voids any past work but it does empower us to discern the accuracy of past results that made use of dubious approximations. Moreover, it paves the way for more precise simulations of X-ray bursts and solar interiors and it gives us more confidance in future simulation results. Perhaps a future paper will do the same derivation but with an anisotropic electron distribution to model strong magnetic fields. </p>
 
